# terminology

./: .gitignore  CMakeLists.txt  libgumbo.so.1.0.0
src/: main.cpp
src/Fileio/: Fileio.cpp  Fileio.h
src/WikiPageParser/: WikiPageParser.cpp  WikiPageParser.h
src/WordEngine/: Graph.cpp  Graph.h  MatrixCreator.cpp  MatrixCreator.h  WordMatrixExp.cpp  WordMatrixExp.h
test/: test_Object.cpp
test/test_Fileio/: test_Fileio.cpp
test/test_Fileio/resources/: write_test_output.txt
test/test_Graph/: test_Graph.cpp
test/test_WordMatrixExp/: test_WordMatrixExp.cpp
